corrected bib format

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -35,12 +35,12 @@
   abstract={Recently, the hybrid deep neural network (DNN)-hidden Markov model (HMM) has been shown to significantly improve speech recognition performance over the conventional Gaussian mixture model (GMM)-HMM. The performance improvement is partially attributed to the ability of the DNN to model complex correlations in speech features. In this paper, we show that further error rate reduction can be obtained by using convolutional neural networks (CNNs). We first present a concise description of the basic CNN and explain how it can be used for speech recognition. We further propose a limited-weight-sharing scheme that can better model speech features. The special structure such as local connectivity, weight sharing, and pooling in CNNs exhibits some degree of invariance to small shifts of speech features along the frequency axis, which is important to deal with speaker and environment variations. Experimental results show that CNNs reduce the error rate by 6%-10% compared with DNNs on the TIMIT phone recognition and the voice search large vocabulary speech recognition tasks.}
  }
  
-@article{xu-etal-2017-local,
+@inproceedings{xu-etal-2017-local,
 	abbr={FOFE-NER},
 	bibtex_show={true},
     title = {A Local Detection Approach for Named Entity Recognition and Mention Detection},
     author = {Xu, Mingbin  and Jiang, Hui and Watcharawittayakul, Sedtawut},
-    booktitle = {Proceedings of the 55th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+    booktitle = {Proceedings of the 55th Annual Meeting of the Association for Computational Linguistics (ACL)},
     month = {July},
     year = {2017},
     address = {Vancouver, Canada},
@@ -75,7 +75,7 @@
   google_scholar_id={DlO-8NBk_-wC},
 }
 
-@paper{jiang2023latentspacetheoryemergent,
+@misc{jiang2023latentspacetheoryemergent,
 	abbr={LLM},
 	bibtex_show={true},
  	title={A Latent Space Theory for Emergent Abilities in Large Language Models}, 
@@ -115,7 +115,7 @@
 	  bibtex_show={true},
       title={Why Learning of Large-Scale Neural Networks Behaves Like Convex Optimization}, 
       author={Hui Jiang},
-      year={2023},
+      year={2019},
       eprint={1903.02140},
       archivePrefix={arXiv},
       primaryClass={cs.LG},
@@ -198,7 +198,7 @@
 	bibtex_show={true},
     title = "Learning Semantic Word Embeddings based on Ordinal Knowledge Constraints",
     author = "Liu, Quan  and Jiang, Hui  and Wei, Si  and Ling, Zhen-Hua  and Hu, Yu",
-    booktitle = "Proceedings of the 53rd Annual Meeting of the Association for Computational Linguistics and the 7th International Joint Conference on Natural Language Processing",
+    booktitle = "Proceedings of the 53rd Annual Meeting of the Association for Computational Linguistics (ACL)",
 	pages = "1501--1511",
     month = {jul},
     year = "2015",
@@ -207,7 +207,7 @@
     url = "https://aclanthology.org/P15-1145",
     doi = "10.3115/v1/P15-1145",
 	pdf ={https://aclanthology.org/P15-1145.pdf},
-	abstract = {In this paper, we propose a general frame- work to incorporate semantic knowledge into the popular data-driven learning pro- cess of word embeddings to improve the quality of them. Under this framework, we represent semantic knowledge as many ordinal ranking inequalities and formu- late the learning of semantic word embed- dings (SWE) as a constrained optimiza- tion problem, where the data-derived ob- jective function is optimized subject to all ordinal knowledge inequality constraints extracted from available knowledge re- sources such as Thesaurus and Word- Net. We have demonstrated that this con- strained optimization problem can be ef- ficiently solved by the stochastic gradient descent (SGD) algorithm, even for a large number of inequality constraints. Experi- mental results on four standard NLP tasks, including word similarity measure, sen- tence completion, name entity recogni- tion, and the TOEFL synonym selection, have all demonstrated that the quality of learned word vectors can be significantly improved after semantic knowledge is in- corporated as inequality constraints during the learning process of word embeddings.},
+	abstract = {In this paper, we propose a general frame-work to incorporate semantic knowledge into the popular data-driven learning process of word embeddings to improve the quality of them. Under this framework, we represent semantic knowledge as many ordinal ranking inequalities and formulate the learning of semantic word embed- dings (SWE) as a constrained optimization problem, where the data-derived objective function is optimized subject to all ordinal knowledge inequality constraints extracted from available knowledge resources such as Thesaurus and Word-Net. We have demonstrated that this con- strained optimization problem can be efficiently solved by the stochastic gradient descent (SGD) algorithm, even for a large number of inequality constraints. Experimental results on four standard NLP tasks, including word similarity measure, sen- tence completion, name entity recognition, and the TOEFL synonym selection, have all demonstrated that the quality of learned word vectors can be significantly improved after semantic knowledge is incorporated as inequality constraints during the learning process of word embeddings.},
     html     = {https://wiki.eecs.yorku.ca/lab/MLL/projects:swe:start},
     dimensions={true},
     google_scholar_id={_elGeoH1qXkC},
@@ -234,7 +234,7 @@
 	bibtex_show={true},
     title = "Leverage Financial News to Predict Stock Price Movements Using Word Embeddings and Deep Neural Networks",
     author = "Peng, Yangtuo  and Jiang, Hui",
-    booktitle = "Proceedings of the 2016 Conference of the North {A}merican Chapter of the Association for Computational Linguistics",
+    booktitle = "Proceedings of the 2016 Conference of the North {A}merican Chapter of the Association for Computational Linguistics (NAACL)",
     month = {Jun},
     year = "2016",
     address = "San Diego, California",
@@ -273,7 +273,7 @@
 	bibtex_show={true},
     title = "{F}reebase{QA}: A New Factoid {QA} Data Set Matching Trivia-Style Question-Answer Pairs with {F}reebase",
     author = "Jiang, Kelvin  and Wu, Dekun  and Jiang, Hui",
-    booktitle = "Proceedings of the 2019 Conference of the North {A}merican Chapter of the Association for Computational Linguistics: Human Language Technologies",
+    booktitle = "Proceedings of the 2019 Conference of the North {A}merican Chapter of the Association for Computational Linguistics (NAACL)",
     month = {Jun},
     year = "2019",
     address = "Minneapolis, Minnesota",
@@ -292,7 +292,7 @@
 	bibtex_show={true},
     title = "Explicit Utilization of General Knowledge in Machine Reading Comprehension",
     author = "Wang, Chao  and Jiang, Hui",
-    booktitle = "Proceedings of the 57th Annual Meeting of the Association for Computational Linguistics",
+    booktitle = "Proceedings of the 57th Annual Meeting of the Association for Computational Linguistics (ACL)",
     month = {jul},
     year = "2019", 
     address = "Florence, Italy",
@@ -319,7 +319,8 @@ address = {New York, NY, USA},
 url = {https://doi.org/10.1145/3308560.3317703}, 
 doi = {10.1145/3308560.3317703}, 
 abstract = {Content-based news recommendation systems need to recommend news articles based on the topics and content of articles without using user specific information. Many news articles describe the occurrence of specific events and named entities including people, places or objects. In this paper, we propose a graph traversal algorithm as well as a novel weighting scheme for cold-start content based news recommendation utilizing these named entities. Seeking to create a higher degree of user-specific relevance, our algorithm computes the shortest distance between named entities, across news articles, over a large knowledge graph. Moreover, we have created a new human annotated data set for evaluating content based news recommendation systems. Experimental results show our method is suitable to tackle the hard cold-start problem and it produces stronger Pearson correlation to human similarity scores than other cold-start methods. Our method is also complementary and a combination with the conventional cold-start recommendation methods may yield significant performance gains.}, 
-location = {San Francisco, USA}, series = {WWW '19},
+	location = {San Francisco, USA}, 
+	booktitle = {WWW '19},
 	html = {https://dl.acm.org/doi/abs/10.1145/3308560.3317703},
 	pdf =   {https://dl.acm.org/doi/pdf/10.1145/3308560.3317703},
 	dimensions={true},
@@ -331,7 +332,7 @@ location = {San Francisco, USA}, series = {WWW '19},
 	bibtex_show={true},
     title = "The Fixed-Size Ordinally-Forgetting Encoding Method for Neural Network Language Models",
     author = "Zhang, ShiLiang  and Jiang, Hui  and Xu, MingBin  and Hou, JunFeng  and Dai, LiRong",
-    booktitle = "Proceedings of the 53rd Annual Meeting of the Association for Computational Linguistics and the 7th International Joint Conference on Natural Language Processing",
+    booktitle = "Proceedings of the 53rd Annual Meeting of the Association for Computational Linguistics (ACL)",
     month = "jul",
     year = "2015",
     address = "Beijing, China",
@@ -345,4 +346,20 @@ location = {San Francisco, USA}, series = {WWW '19},
 	code ={https://github.com/xmb-cipher/iNCML-DNNLM},
 	dimensions={true},
     google_scholar_id={2lNr6VoPGyEC},
+}
+
+@inproceedings{ijcai2017p326,
+  abbr =  {WS},
+  author    = {Quan Liu and Hui Jiang and Andrew Evdokimov and Zhen-Hua Ling and Xiaodan Zhu and Si Wei and Yu Hu},
+  title     = {Cause-Effect Knowledge Acquisition and Neural Association Model for Solving A Set of Winograd Schema Problems},
+  booktitle = {Proceedings of the Twenty-Sixth International Joint Conference on Artificial Intelligence, {IJCAI-17}},
+  pages     = {2344--2350},
+  year      = {2017},
+  doi       = {10.24963/ijcai.2017/326},
+  url       = {https://doi.org/10.24963/ijcai.2017/326},
+  abstract = {This paper focuses on the investigations in Winograd Schema (WS), a challenging problem which has been proposed for measuring progress in commonsense reasoning.Due to the lack of commonsense knowledge and training data, very little work has been found on the WS problems in recent years.Actually, there is no shortcut to solve this problem except to collect more commonsense knowledge and design suitable models.Therefore, this paper addresses a set of WS problems by proposing a knowledge acquisition method and a general neural association model.To avoid the sparseness issue, the knowledge we aim to collect is the cause-effect relationships between thousands of commonly used words.The knowledge acquisition method supports us to extract hundreds of thousands of cause-effect pairs from large text corpus automatically.Meanwhile, a neural association model (NAM) is proposed to encode the association relationships between any two discrete events.Based on the extracted knowledge and the NAM models, in this paper, we successfully build a system for solving WS problems from scratch and achieve 70.0% accuracy.Most importantly, this paper provides a flexible framework to solve WS problems based on event association and neural network methods.},
+  html     = {https://www.ijcai.org/proceedings/2017/326},
+  pdf ={https://www.ijcai.org/proceedings/2017/0326.pdf},
+ dimensions={true},
+  google_scholar_id={hnLuywnv79wC},
 }
