--- a/_posts/2025-8-14-Bitcoin.md
+++ b/_posts/2025-8-14-Bitcoin.md
@@ -35,7 +35,7 @@ toc:
 
 ---
 
-In this post, we provide a concise introduction to the key technologies that underpin the Bitcoin network. This overview highlights several important implementations within Bitcoin and offers readers the foundational knowledge needed to understand how the network operates <d-cite key="Antonopoulos2014"></d-cite> <d-cite key="Rosenbaum2019"></d-cite><d-cite key="Ammous2018"></d-cite>.
+In this post, we provide a concise introduction to the key technologies that underpin the Bitcoin network. This overview highlights several important implementations within Bitcoin and offers readers the foundational knowledge needed to understand how the network operates. More specifically, we cover how Bitcoin addresses are created, how wallets work, how the network generates and verifies transactions, how proof-of-work powers the blockchain, and new features like SegWit. Interested readers can refer to <d-cite key="Antonopoulos2014"></d-cite> <d-cite key="Rosenbaum2019"></d-cite><d-cite key="Ammous2018"></d-cite> for more technical details.
 
 ## **Bitcoin Address**
 
