fixed typos in Bitcoin post

--- a/_posts/2025-8-14-Bitcoin.md
+++ b/_posts/2025-8-14-Bitcoin.md
@@ -60,14 +60,14 @@ In Figure 1, there are three key components that are explained in detail below:
 
 {% include figure.liquid path="assets/img/2025-08-14-Bitcoin/base58check-encoding.png" class="img-fluid rounded z-depth-1" zoomable=true %}
 
-The following diagrams further explain the encoding and decoding processes between  public key and its corresponding Bitcoin address:  
+The following diagrams further explain the Base58 encoding and decoding processes between a public key hash and its corresponding Bitcoin address:  
 
-1. Convert a public key ‘5f26….1e60’ into a Bitcoin address ‘19g6….RBPD’
+* Convert 25 bytes of a public key hash and its checksum  ‘5f26….1e60’ into a Bitcoin address ‘19g6….RBPD’
 
 {% include figure.liquid path="assets/img/2025-08-14-Bitcoin/key-to-address-example.png" class="img-fluid rounded z-depth-1" zoomable=true %}
 
 
-2. Convert a bitcoin address back to its corresponding public key:
+* Convert a bitcoin address back to its corresponding public key hash:
 
 {% include figure.liquid path="assets/img/2025-08-14-Bitcoin/address-back-key-example.png" class="img-fluid rounded z-depth-1" zoomable=true %}
 
@@ -81,7 +81,7 @@ If a Bitcoin user relies on the same address for all transactions, this can crea
 * Because all addresses and transaction details are publicly visible on the network, consistently using a single address makes it easy to link all transactions to one user. Even if the user’s real-world identity is not directly revealed, this practice still represents a significant violation of privacy.
 
 
-The solution to these problems is to use each Bitcoin address only once, requiring users to generate a new address for every transaction. As a result, a user may need to manage a large number of addresses, each with its own private key. To simplify this process, the concept of a wallet was introduced. A wallet allows a user to store and manage multiple Bitcoin addresses along with their corresponding private keys, all under the control of that user.
+The solution to these problems is to use each Bitcoin address only once, requiring users to generate a new address for every transaction. As a result, a user may need to manage a large number of addresses, each with its own private key. To simplify this process, the concept of a **wallet** was introduced. A wallet allows a user to store and manage multiple Bitcoin addresses along with their corresponding private keys, all under the control of that user.
 
 In addition, a wallet can provide several other important functions for users. For instance, it can help initiate transactions from its stored addresses, using the securely held private keys to sign these transactions before broadcasting them to the network. A wallet can also continuously monitor the Bitcoin network to track the funds associated with all of its addresses. Moreover, it should offer reliable backup options or a secure recovery mechanism, enabling users to restore their private keys and addresses in case the wallet is lost or damaged.
 
@@ -91,16 +91,16 @@ If all addresses and private keys in a wallet were generated independently at ra
 
  The key idea behind HD wallets is to extend each private key into an extended private key (xprv), which consists of two components: the private key itself and a chain code. Likewise, each public key can be extended into an extended public key (xpub), containing the public key and a corresponding chain code. These chain codes are derived by applying HMAC-SHA512 to input data, producing a 512-bit hash that is then split into two parts: a 256-bit chain code and a 256-bit value used as the private key in an xprv or as the public key in an xpub. The chain codes enable the generation of additional xprvs or xpubs in a hierarchical tree structure, following a specified derivation path.
 
-1. **Deriving a master xprv and xpub**: The wallet seed is processed with HMAC-SHA512 to produce a 512-bit hash. This hash is then split into two halves: the left 256 bits form the master private key, while the right 256 bits serve as the chain code. The chain code is subsequently used to derive additional private keys in the next steps.
+* **Deriving a master xprv and xpub**: The wallet seed is processed with HMAC-SHA512 to produce a 512-bit hash. This hash is then split into two halves: the left 256 bits form the master private key, while the right 256 bits serve as the chain code. The chain code is subsequently used to derive additional private keys in the next steps.
 
 {% include figure.liquid path="assets/img/2025-08-14-Bitcoin/xprv-xpub.png" class="img-fluid rounded z-depth-1" zoomable=true %}
 
 
-2. **Deriving hardened private keys for all child nodes**: Each node in the tree is identified by a derivation path. For example, the derivation path ‘m/0/1’ indicates the second grandchild of the first child of the root, where m denotes the master private key. Child private keys are derived recursively in a top-down manner according to their respective derivation paths. The diagram below illustrates this process, showing how the ‘hardened’ private key m/1’ can be derived from its parent key m. Note that the corresponding public key for this node, denoted as M/1’, can be derived from the private key m/1’ using the standard cryptographic technique.  
+* **Deriving hardened private keys for all child nodes**: Each node in the tree is identified by a derivation path. For example, the derivation path ‘m/0/1’ indicates the second grandchild of the first child of the root, where m denotes the master private key. Child private keys are derived recursively in a top-down manner according to their respective derivation paths. The diagram below illustrates this process, showing how the ‘hardened’ private key m/1’ can be derived from its parent key m. Note that the corresponding public key for this node, denoted as M/1’, can be derived from the private key m/1’ using the standard cryptographic technique.  
 
 {% include figure.liquid path="assets/img/2025-08-14-Bitcoin/xprv-child.png" class="img-fluid rounded z-depth-1" zoomable=true %}
 
-3. The whole process is shown as below:
+* The whole process is shown as below:
 
 {% include figure.liquid path="assets/img/2025-08-14-Bitcoin/xprv-whole-1.png" class="img-fluid rounded z-depth-1" zoomable=true %}
 
