fix more typos in 2026-01-12 post

--- a/assets/bibliography/2026-01-12-epsilon-language.bib
+++ b/assets/bibliography/2026-01-12-epsilon-language.bib
@@ -1,7 +1,7 @@
 @article{Jiang2023LatentSpaceEmergent,
   author       = {Jiang, H.},
   title        = {A Latent Space Theory for Emergent Abilities in Large Language Models},
-  journal      = {arXiv},
+  journal      = {arXiv preprint},
   year         = {2023},
   eprint       = {2304.09960},
   archivePrefix= {arXiv},
@@ -28,7 +28,7 @@
 @phdthesis{Kilgarriff1992Polysemy,
   author = {Kilgarriff, Adam},
   title  = {Polysemy},
-  school = {University of Sussex},
+  publisher = {Ph.D thesis, University of Sussex},
   year   = {1992}
 }
 
@@ -183,7 +183,7 @@
   volume  = {20},
   number  = {11},
   pages   = {818--829},
-  doi     = {10.1016/j.tics.2016.08.005}
+  doi     = {10.1016/j.tics.2016.08.005},
 }
 
 @article{MacDonaldPearlmutterSeidenberg1994LexicalAmbiguity,
@@ -194,7 +194,8 @@
   volume  = {101},
   number  = {4},
   pages   = {676--703},
-  doi     = {10.1037/0033-295X.101.4.676}
+  doi     = {10.1037/0033-295X.101.4.676},
 }
+
 
 
